--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "sentinel_ultimate"
+name = "sentinel"
 version = "1.0.0"
 edition = "2021"
 
+[profile.release]
+opt-level = 'z'  # Минимальный размер
+lto = true
+codegen-units = 1
+panic = 'abort'
+
 [dependencies]
-windows = { version = "0.58", features = [
-    "Win32_System_Threading",
-    "Win32_Foundation",
-    "Win32_NetworkManagement_IpHelper",
-    "Win32_Networking_WinSock",
-    "Win32_System_Diagnostics_Debug"
-] }
-ntapi = "0.4"
