--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 
 [profile.release]
-opt-level = 'z'  # Минимальный размер
+opt-level = 'z'
 lto = true
 codegen-units = 1
 panic = 'abort'
